# integral_switch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  integral_switch-config.cmake.in
include/: integral_switch.h
script/: benchmark.md  benchmark.py  benchmark_switch.tmpl  gen-integral-switch.py  gen_integral_switch.py  integral_switch.tmpl  lint.py  switch_benchmark.tmpl
test/: .clang-tidy  CMakeLists.txt  benchmark_switch.cpp  benchmark_switch.h  example_test.cpp  serializer_example.cpp  simple_test.cpp  switch_benchmark.cpp  switch_benchmark.h  switch_test.cpp  test_dispatch.cpp  test_example.cpp  test_serializer_example.cpp  test_switch.cpp
